<resources>
    <string name="app_name">Altimeter</string>
    <string name="adTitleBar">Sensor not Available</string>
    <string name="adTitleTemp">Enter Temperature</string>
    <string name="adButtonText">OK</string>
    <string name="adMessage"></string>
    <string name="set_null">Set Null</string>
    <string name="freeze">Stop</string>
    <string name="unfreeze">Start</string>
    <string name="m">m</string>
    <string name="pressure">Pressure:</string>
    <string name="bar">hPa</string>
    <string name="mmhg">mmHg</string>
    <string name="temp">Temperature:</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="temp_set">Set temperature</string>
    <string name="saved_press_data">Press value</string>
</resources>
